[package]
name = "rust-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
async-graphql = { version = "4.0.16", features = ["bson", "chrono"] }
async-graphql-actix-web = "4.0.16"
serde = "1.0.147"
dotenv = "0.15.0"
futures = "0.3.25"
mongodb = "2.3.1"
